work on the todo site

--- a/todolist-ejs-v1/views/list.ejs
+++ b/todolist-ejs-v1/views/list.ejs
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>To Do List</title>
-  </head>
-  <body>
-      <h1><%= kindOfDay %></h1>
-      <ul>
-        <%for (var i=0; i < newListItems.length; i++) {%>
-          <li><%= newListItems[i]%></li>
-        <%}%>
-        <li>
-          <form class="" action="/newItem" method="post">
-            <input id="newItem" type="text" name="newItem">
-            <!-- <button type="submit">Add Item</button> -->
-          </form>
-        </li>
-      </ul>
-  </body>
-</html>
+<%- include("header") -%>
+
+<div class="box" id="heading">
+  <h1><%= listTitle %></h1>
+</div>
+<div class="box">
+  <%for (var i=0; i < newListItems.length; i++) {%>
+  <div class="item">
+    <input type="checkbox">
+    <p><%= newListItems[i]%></p>
+  </div>
+  <%}%>
+            <form class="item" action="/newItem" method="post">
+              <input id="newItem" type="text" name="newItem" placeholder="New Item" autocomplete="off">
+              <button type="submit" name="list" value=<%= listTitle %>>+</button>
+  </form>
+</div>
+
+<%- include("footer") -%>
