--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -1,6 +1,15 @@
-<%- include("header") -%>
+<%- include("partials/header") -%>
 
 <h1>Home</h1>
 <p><%= homeContent %></p>
 
-<%- include("footer") -%>
+<% posts.forEach(function(post) { %>
+  <h1><%= post.title %></h1>
+  <% let link = "/Posts/" + post.title %>
+  <p>
+    <%= post.body.substring(0,100) + " ... " %>
+    <a href="/Posts/<%= post.title %>">Read More</a>
+  </p>
+<% }); %>
+
+<%- include("partials/footer") -%>
